name:                renkon
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/kayhide/renkon#readme
license:             BSD3
license-file:        LICENSE
author:              kayhide
maintainer:          kayhide@gmail.com
copyright:           2017 kayhide
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Renkon
                     , Renkon.Util
                     , Renkon.Config
                     , Renkon.Command
                     , Renkon.Command.Path
                     , Renkon.Command.List
  build-depends:       base >= 4.7 && < 5
                     , text
                     , lens
                     , transformers
                     , mtl
                     , foldl
                     , ansi-terminal
                     , turtle
  default-language:    Haskell2010

executable renkon
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , renkon
  default-language:    Haskell2010

test-suite renkon-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , renkon
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kayhide/renkon
